Update project dependencies, and minor fixes